<?xml version="1.0" encoding="utf-8"?>

<!--<android:background="#ffffff"
android:backgroundTint="@color/Blue"-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/final_proj_root"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/CurrentAccelarationLabel"
        android:textColor="@color/White"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:baselineAligned="false"
        android:gravity="center|top"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/XAxisLabel"
                android:textColor="@color/White"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/currentX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/CurrentX"
                android:textColor="@color/White"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/YAxisLabel"
                android:textColor="@color/White"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/currentY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/CurrentY"
                android:textColor="@color/White"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/ZAxisLabel"
                android:textColor="@color/White"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/currentZ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/CurrentZ"
                android:textColor="@color/White"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:baselineAligned="false"
        android:gravity="center|top"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="23dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/AngleLabel"
                android:layout_width="112dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/AngleLabel"
                android:gravity="center"
                android:textColor="@color/White"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Angle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/Angle"
                android:textColor="@color/White"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="27dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/RGBLabel"
                android:layout_width="181dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/RGBLabel"
                android:gravity="center"
                android:textColor="@color/White"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/RGBValues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/RGBValues"
                android:textColor="@color/White"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <SeekBar
        android:id="@+id/PWM_MOTOR_SeekBar"
        android:layout_width="257dp"
        android:layout_height="61dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="348dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/Saturation_SeekBar"
        android:layout_width="259dp"
        android:layout_height="61dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="472dp"
        android:progress="50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PWM_Label"
        android:layout_width="135dp"
        android:layout_height="61dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="288dp"
        android:gravity="center"
        android:text="@string/PWM_Label"
        android:textColor="@color/White"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SaturationLabel"
        android:layout_width="126dp"
        android:layout_height="61dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="416dp"
        android:gravity="center"
        android:text="@string/SaturationLabel"
        android:textColor="@color/White"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PWM_setX"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginLeft="192dp"
        android:layout_marginTop="352dp"
        android:text="@string/PWM_setX"
        android:textSize="20sp"
        android:textColor="@color/White"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Saturation_setX"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginLeft="192dp"
        android:layout_marginTop="472dp"
        android:text="@string/Saturation_setX"
        android:textSize="20sp"
        android:textColor="@color/White"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>